# gravity-fun

./: CMakeLists.txt  README.md  build.cmd
shaders/: compile-shaders.cmd
shaders/compiled/: CS_Heatmap.cso  CS_MassParticles.cso  CS_VisualParticles.cso  PS_Basic.cso  PS_Heatmap_Color.cso  PS_Heatmap_Grayscale.cso  VS_Heatmap.cso  VS_Points_ColorBuffer.cso  VS_Points_UniColor.cso  VS_Rects_ColorBuffer.cso  VS_Rects_UniColor.cso
shaders/hlsl/: Common.hlsl  ComputeHeatmap.hlsl  ComputeParticles.hlsl  RenderHeatmap.hlsl  RenderPrimitives.hlsl
src/: App.cpp  App.h  ColorGradient.cpp  ColorGradient.h  GenerateParticles.cpp  GenerateParticles.h  Main.cpp  Main.h  ParticleRenderer.cpp  ParticleRenderer.h  Scenarios.cpp  Scenarios.h  ShaderCommon.h  Universe.cpp  Universe.h
